Fix table alignments

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,10 @@ body {
 }
 
 h1 {
-  font-size: 32px;
+  text-align: left;
+	font-size: 3em;
+	line-height: 1em;
+	position: relative;
   font-weight: bold;
   margin: 0 0 20px;
 }
